p2/confs/manifests/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: app1
 name: app1-deployment
spec:
 replicas: 1
 selector:
   matchLabels:
     app: app1
 template:
   metadata:
     labels:
       app: app1
   spec:
     containers:
     - image: traefik/whoami
       name: whoami
---

apiVersion: v1
kind: Service
metadata:
 labels:
   app: app1
 name: app1
spec:
 ports:
 - port: 80
   protocol: TCP
   targetPort: 80
 selector:
   app: app1
