p2/confs/manifests/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: app2
 name: app2-deployment
spec:
 replicas: 3
 selector:
   matchLabels:
     app: app2
 template:
   metadata:
     labels:
       app: app2
   spec:
     containers:
     - image: traefik/whoami
       name: whoami
---

apiVersion: v1
kind: Service
metadata:
 labels:
   app: app2
 name: app2
spec:
 ports:
 - port: 80
   protocol: TCP
   targetPort: 80
 selector:
   app: app2
