p2/confs/manifests/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 labels:
   app: app3
 name: app3-deployment
spec:
 replicas: 1
 selector:
   matchLabels:
     app: app3
 template:
   metadata:
     labels:
       app: app3
   spec:
     containers:
     - image: traefik/whoami
       name: whoami
---

apiVersion: v1
kind: Service
metadata:
 labels:
   app: app3
 name: app3
spec:
 ports:
 - port: 80
   protocol: TCP
   targetPort: 80
 selector:
   app: app3
